--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -13,4 +13,9 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka1:2002/eureka
+      defaultZone: http://eureka1:2001/eureka,http://eureka1:2002/eurek
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
