--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -6,7 +6,12 @@ sp:
 spring:
   application:
     name: user-service
-    
+  rabbitmq:
+    host: 192.168.10.129
+    port: 5672
+    username: admin
+    password: admin
+        
 server:
   port: 8101  #服务端口
 
